--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -47,7 +47,6 @@
   }
 
   .character-image {
-    height: 150px;
     overflow: hidden;
 
     img {
@@ -58,6 +57,7 @@
     }
   }
 
+  // TODO: fix padding for medium-screen
   .character-header {
     @include transition(all .2s ease-in-out);
     border-bottom: 1px solid $base-border-color;
@@ -67,6 +67,7 @@
     padding: ($base-spacing / 3) $small-spacing;
   }
 
+  // TODO: fix padding for medium-screen
   .character-description {
     @include transition(all .2s ease-in-out);
     color: $base-font-color;
