--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -9,6 +9,6 @@
   = f.input :current_password, required: true, hint: true
   .form-actions
     = f.submit class: "submit"
-%form
+%form.delete-user
   %h3.form-heading= t(".delete.heading")
   = link_to t(".delete.submit"), registration_path(resource_name), data: { confirm: t(".delete.confirmation") }, method: :delete
