--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -4,18 +4,18 @@
     = link_to "javascript:void(0)", class: "navbar-menu-button", "aria-label": "Toggle Menu" do
       = icon "bars"
     %ul.navbar-toggle.show
-      = nav_link_to t("paths.home"), home_path
-      = nav_link_to t("paths.about"), about_path
-      = nav_link_to t("paths.contact"), "/contact"
+      = active_link_to t("paths.home"), home_path, wrap_tag: :li
+      = active_link_to t("paths.about"), about_path, wrap_tag: :li
+      = active_link_to t("paths.contact"), "/contact", wrap_tag: :li
       %ul.navbar-right
-        = nav_link_to t("paths.users"), users_path
+        = active_link_to t("paths.users"), users_path, wrap_tag: :li
         - if user_signed_in?
           %li.more
             = link_to current_user, "javascript:void(0)"
             %ul.submenu
-              = nav_link_to t("paths.user"), current_user
-              = nav_link_to t("paths.edit_user_registration"), edit_user_registration_path
+              = active_link_to t("paths.user"), current_user, wrap_tag: :li
+              = active_link_to t("paths.edit_user_registration"), edit_user_registration_path, wrap_tag: :li
               %li.separator
               %li= link_to t("paths.destroy_user_session"), destroy_user_session_path, method: :delete
         - else
-          = nav_link_to t("paths.new_user_session"), new_user_session_path
+          = active_link_to t("paths.new_user_session"), new_user_session_path, wrap_tag: :li
