--- a/app/views/devise/mailer/confirmation_instructions.text.erb
+++ b/app/views/devise/mailer/confirmation_instructions.text.erb
@@ -1,6 +1,5 @@
-<% # TODO: localize %>
-Welcome <%= @resource.name %>!
+<%= t(".greeting", name: @resource.name) %>
 
-You can confirm your account email through the link below:
+<%= t(".instructions") %>
 
 <%= confirmation_url(@resource, confirmation_token: @token) %>
