--- a/app/views/devise/mailer/reset_password_instructions.text.erb
+++ b/app/views/devise/mailer/reset_password_instructions.text.erb
@@ -1,9 +1,9 @@
-<% # TODO: localize %>
-Hello <%= @resource.name %>!
+<%= t(".greeting", name: @resource.name) %>
 
-Someone has requested a link to change your password. You can do this through the link below.
+<%= t(".instructions") %>
 
 <%= edit_password_url(@resource, reset_password_token: @token) %>
 
-If you didn't request this, please ignore this email.
-Your password won't change until you access the link above and create a new one.
+<%= t(".ignore") %>
+
+<%= t(".help") %>
