--- a/app/views/devise/mailer/unlock_instructions.text.erb
+++ b/app/views/devise/mailer/unlock_instructions.text.erb
@@ -1,8 +1,7 @@
-<% # TODO: localize %>
-Hello <%= @resource.name %>!
+<%= t(".greeting", name: @resource.name) %>
 
-Your account has been locked due to an excessive number of unsuccessful sign in attempts.
+<%= t(".info") %>
 
-Follow the link below to unlock your account:
+<%= t(".instructions") %>
 
 <%= unlock_url(@resource, unlock_token: @token) %>
