--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -2,14 +2,30 @@
   margin-bottom: $base-spacing;
 }
 
+// TODO: style users index
 .users {
   margin-bottom: $base-spacing;
-  // TODO: style users index
+
+  @include media($medium-screen) {
+    @include shift(1);
+    @include span-columns(10);
+  }
+
+  .user {
+    margin-bottom: $small-spacing;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    img {
+      border-radius: $base-border-radius;
+    }
+  }
 }
 
+// TODO: mobile-first
 .user-info {
-  // TODO: mobile-first
-
   @include media($medium-screen) {
     @include span-columns(3);
   }
