--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -8,7 +8,7 @@
       = active_link_to t("paths.about"), about_path, wrap_tag: :li
       = active_link_to t("paths.contact"), "/contact", wrap_tag: :li
       %ul.navbar-right
-        = active_link_to t("paths.users"), users_path, wrap_tag: :li
+        = active_link_to t("paths.users"), users_path, wrap_tag: :li, active: :exact
         - if user_signed_in?
           %li.more
             = link_to current_user, "javascript:void(0)"
