--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -15,6 +15,9 @@
             %ul.submenu
               = active_link_to t("paths.user"), current_user, wrap_tag: :li
               = active_link_to t("paths.edit_user_registration"), edit_user_registration_path, wrap_tag: :li
+              - if current_user.admin?
+                %li.separator
+                %li= link_to t("paths.sidekiq_web"), sidekiq_web_path
               %li.separator
               %li= link_to t("paths.destroy_user_session"), destroy_user_session_path, method: :delete
         - else
