--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -18,6 +18,7 @@
               - if current_user.admin?
                 %li.separator
                 %li= link_to t("paths.sidekiq_web"), sidekiq_web_path
+                %li= link_to t("paths.pg_hero"), pg_hero_path
               %li.separator
               %li= link_to t("paths.destroy_user_session"), destroy_user_session_path, method: :delete
         - else
