Update some minor styling

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -5,6 +5,14 @@
   $hint-border-color: $action-color;
   $hint-text-color: #fff;
 
+  > input {
+    position: relative;
+
+    &:focus {
+      z-index: 2;
+    }
+  }
+
   &.connected,
   &.hide-label {
     > label {
