Configure webpack-dev-server and react-hot-loader

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -4,5 +4,5 @@
 %meta{ name: "viewport", content: "width=device-width, initial-scale=1" }
 = render "layouts/head/meta_tags"
 = csrf_meta_tags
-= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": true
-= javascript_include_tag "application", "data-turbolinks-track": true
+= stylesheet_link_tag "application", media: "all"
+= javascript_include_tag "app.bundle", debug: false
