--- a/app/views/layouts/head/_meta_tags.html.haml
+++ b/app/views/layouts/head/_meta_tags.html.haml
@@ -1,2 +1,3 @@
 %meta{ name: "drac:env", content: Rails.env }
 %meta{ name: "drac:user", content: current_user.to_json }
+%meta{ name: "drac:flashes", content: flash.to_hash.to_json }
