--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,10 +1,9 @@
 %nav.navbar{ role: "navigation" }
   .navbar-container
-    -# TODO: localize aria-label
-    = link_to "javascript:void(0)", class: "navbar-menu-button", "aria-label": "Toggle Menu" do
+    = link_to "javascript:void(0)", class: "navbar-menu-button", "aria-label": t(".navbar_menu_button_label") do
       = icon "bars"
     %ul.navbar-toggle.show
-      = active_link_to t("paths.home"), home_path, wrap_tag: :li, active: [['home'], ['index']]
+      = active_link_to t("paths.home"), home_path, wrap_tag: :li, active: [["home"], ["index"]]
       = active_link_to t("paths.about"), about_path, wrap_tag: :li
       = active_link_to t("paths.contact"), "/contact", wrap_tag: :li
       %ul.navbar-right
