Start major refactor

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,5 @@
   %head
     = render "layouts/head"
   %body
-    = render "layouts/navbar"
-    .container
-      #react-flashes
-      = yield
+    #draconomicon
+    = javascript_include_tag "app.bundle.js"
