Implement characters controller

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,3 +1,9 @@
+input[disabled],
+textarea[disabled] {
+  background-color: lighten($light-gray, 10%);
+  cursor: not-allowed;
+}
+
 .form-group {
   $error-border-color: darken($error-color, 35%);
   $error-text-color: #fff;
