--- a/app/assets/stylesheets/_transitions.scss
+++ b/app/assets/stylesheets/_transitions.scss
@@ -4,8 +4,8 @@
 .fade {
   &-appear,
   &-enter {
-    @include transition(opacity .4s ease-in-out);
     opacity: 0;
+    transition: opacity .4s $base-timing;
 
     &-active {
       opacity: 1;
@@ -13,8 +13,8 @@
   }
 
   &-leave {
-    @include transition(opacity .4s ease-in-out);
     opacity: 1;
+    transition: opacity .4s $base-timing;
 
     &-active {
       opacity: 0;
