--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,13 +1,9 @@
 .form-group {
-  $error-border-color: darken($error-color, 35%);
-  $error-text-color: #fff;
-  $form-error-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($error-border-color, $lightness: -5%, $alpha: -.3);
-  $hint-border-color: $action-color;
-  $hint-text-color: #fff;
+  $form-error-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($red, $lightness: -5%, $alpha: -.3);
 
   > input {
-    @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s, z-index ease-in-out .15s);
     position: relative;
+    transition: all $base-duration $base-timing;
 
     &:focus {
       z-index: 2;
@@ -49,14 +45,18 @@
 
     > .hint {
       @include border-bottom-radius($base-border-radius);
-      background-color: $hint-border-color;
-      color: $hint-text-color;
+      background-color: $blue;
+      color: $white;
       display: block;
+      -webkit-font-smoothing: antialiased;
       margin-bottom: $small-spacing;
       padding: 0 ($base-spacing / 3);
     }
 
-    &.input-error > .hint,
+    &.input-error > .hint {
+      display: none;
+    }
+
     &.connected > .hint {
       border-radius: 0;
       margin-bottom: -1px;
@@ -71,7 +71,7 @@
   &.input-error {
     > input {
       @include border-bottom-radius(0);
-      border-color: $error-border-color;
+      border-color: $red;
       margin-bottom: -1px;
 
       &:focus {
@@ -82,9 +82,10 @@
 
     > .error {
       @include border-bottom-radius($base-border-radius);
-      background-color: $error-border-color;
-      color: $error-text-color;
+      background-color: $red;
+      color: $white;
       display: block;
+      -webkit-font-smoothing: antialiased;
       margin-bottom: $small-spacing;
       padding: 0 ($base-spacing / 3);
     }
