--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -5,10 +5,11 @@
   $navbar-height: 3em;
   $navbar-submenu-width: 12em;
   $navbar-submenu-separator-color: lighten($navbar-background-color, 10%);
-  $navbar-text-color: #fff;
+  $navbar-text-color: $white;
 
   @include clearfix;
   background-color: $navbar-background-color;
+  -webkit-font-smoothing: antialiased;
   min-height: $navbar-height;
 
   .navbar-container {
