--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -8,8 +8,8 @@
   $navbar-text-color: $white;
 
   @include clearfix;
+  @include font-smoothing;
   background-color: $navbar-background-color;
-  -webkit-font-smoothing: antialiased;
   min-height: $navbar-height;
 
   .navbar-container {
