--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -2,6 +2,7 @@
 %meta{ charset: "utf-8" }
 %meta{ "http-equiv": "X-UA-Compatible", content: "IE=edge" }
 %meta{ name: "viewport", content: "width=device-width, initial-scale=1" }
+%meta{ name: "environment", content: Rails.env }
 = csrf_meta_tags
 = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,400,400italic,700,700italic", media: "all", "data-turbolinks-track": true
 = stylesheet_link_tag "application", media: "all", "data-turbolinks-track": true
